--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,15 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+//Partials
+@import 'partials/reset';
+@import 'partials/common';
+@import 'partials/mixin';
+@import 'partials/header';
+@import 'partials/main';
+@import 'partials/footer';
+
+
+
+
