Add: create_new-post

--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -1,11 +1,11 @@
 // font
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
-body, pre {
+body {
     // font-family: 'Inconsolata', monospace;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.2rem;
-    background-color: darkolivegreen;
+    font-size: 1.1rem;
+    background-color: rgb(61, 114, 150);
     color: #000;
 }
 
