--- a/public/css/guest.css
+++ b/public/css/guest.css
@@ -48,7 +48,6 @@ header nav .nav__user {
   justify-content: flex-end;
 }
 header nav .nav__user a {
-  background-color: #3d7296;
   text-decoration: none;
   font-family: "Inconsolata", monospace;
   font-size: 1.3rem;
@@ -97,12 +96,21 @@ main aside .elsewhere a {
   border: 0.09375rem solid #000;
 }
 main .hero {
-  background-image: url("https://awkwardfamilyphotos.com/wp-content/uploads/2011/09/Screen-Shot-2019-12-20-at-5.33.32-PM.jpg");
-  background-size: cover;
-  background-position: center;
+  position: relative;
   width: 100%;
   height: 100vh;
   z-index: 3;
+}
+main .hero img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
+  position: absolute;
+  top: 0;
+  z-index: -1;
 }
 main .hero h1 {
   font-family: "Inconsolata", monospace;
@@ -127,13 +135,24 @@ main .posts .posts__list .item__card {
 }
 main .posts .posts__list .item__card .card__img {
   width: 40%;
+  height: 9.375rem;
   position: relative;
 }
 main .posts .posts__list .item__card .card__img img {
+  height: 100%;
   width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
 }
 main .posts .posts__list .item__card .card__img svg path {
+  height: 100%;
   width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
 }
 main .posts .posts__list .item__card .card__img svg {
   position: absolute;
@@ -148,6 +167,9 @@ main .posts .posts__list .item__card h2 {
   font-family: "Inconsolata", monospace;
   color: #fff;
   mix-blend-mode: difference;
+}
+main .posts .posts__list .card__info {
+  font-size: 1rem;
 }
 main .posts .posts__list p {
   font-size: 0.8rem;
