--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -53,15 +53,19 @@ main {
     }
 
     .hero {
-        background-image: url('https://awkwardfamilyphotos.com/wp-content/uploads/2011/09/Screen-Shot-2019-12-20-at-5.33.32-PM.jpg');
-        background-size: cover;
-        background-position: center;
+        position: relative;
         width: 100%;
         height: 100vh;
         z-index: 3;
+
+        img {
+            @include objFit--C-T;
+            position: absolute;
+            top: 0;
+            z-index: -1;
+        }
         h1 {
             font-family: 'Inconsolata', monospace;
-            // text-transform: uppercase;
             font-size: 8rem;
             color: yellow;
             padding: 5rem;
@@ -82,12 +86,13 @@ main {
                 margin: 5rem 0;
                 .card__img {
                     width: 40%;
+                    height: 9.375rem;
                     position: relative;
                     img {
-                        width: 100%;
+                        @include objFit--C-T;
                     }
                     svg path{
-                        width: 100%;
+                        @include objFit--C-T;
                     }
                     svg {
                         position: absolute;
@@ -105,6 +110,10 @@ main {
                     color: #fff;
                     mix-blend-mode: difference;
                 }
+            }
+
+            .card__info {
+                font-size: 1rem;
             }
 
 
