--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -42,7 +42,7 @@ main {
         .elsewhere {
 
             li {
-                margin-bottom: .3rem;
+                margin: 1rem 0;
             }
 
             a {
