Add: media queries

--- a/public/css/guest.css
+++ b/public/css/guest.css
@@ -25,8 +25,8 @@ ul {
 header {
   position: fixed;
   top: 0;
-  width: 100%;
   z-index: 10;
+  width: 100%;
 }
 header nav {
   padding: 0.2rem 0;
@@ -35,10 +35,12 @@ header nav ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 header nav a {
   padding: 0.5rem;
   color: #fff;
+  margin-bottom: 1.3rem;
 }
 header nav a:hover {
   color: #000;
@@ -53,6 +55,14 @@ header nav .nav__user a {
   font-size: 1.3rem;
 }
 
+@media screen and (max-width: 768px) {
+  header nav .nav__user {
+    padding: 0.1rem 0;
+  }
+  header nav .nav__user a {
+    font-size: 1rem;
+  }
+}
 main::before {
   content: "";
   width: 100%;
@@ -134,9 +144,10 @@ main .posts .posts__list .item__card {
   margin: 5rem 0;
 }
 main .posts .posts__list .item__card .card__img {
-  width: 40%;
-  height: 9.375rem;
+  width: 5.6875rem;
+  height: 8rem;
   position: relative;
+  overflow: hidden;
 }
 main .posts .posts__list .item__card .card__img img {
   height: 100%;
@@ -156,6 +167,7 @@ main .posts .posts__list .item__card .card__img svg path {
 }
 main .posts .posts__list .item__card .card__img svg {
   position: absolute;
+  height: 100%;
   top: 0;
   left: 0;
 }
@@ -170,6 +182,9 @@ main .posts .posts__list .item__card h2 {
 }
 main .posts .posts__list .card__info {
   font-size: 1rem;
+}
+main .posts .posts__list .card__btn {
+  text-align: right;
 }
 main .posts .posts__list p {
   font-size: 0.8rem;
@@ -215,6 +230,52 @@ main .post a {
   text-decoration: underline;
 }
 
+@media screen and (max-width: 768px) {
+  main aside {
+    width: 40%;
+    top: 7rem;
+  }
+  main aside p, main aside a {
+    font-size: 0.6rem;
+  }
+  main aside .archives {
+    font-size: 1rem;
+  }
+  main aside .elsewhere li {
+    margin: 0.5rem 0;
+  }
+  main aside h3 {
+    font-size: 0.7rem;
+  }
+  main .post {
+    padding: 6rem 0.5rem;
+  }
+  main .post h1 {
+    font-size: 3rem;
+  }
+  main .hero h1 {
+    font-size: 3rem;
+    padding: 7rem 2rem;
+  }
+  main .posts {
+    padding: 4rem 0.5rem;
+  }
+  main .posts .posts__list {
+    grid-template-columns: 1fr;
+  }
+  main .posts .posts__list .item__card {
+    margin: 3rem 0;
+  }
+  main .posts .posts__list .item__card h2 {
+    font-size: 2rem;
+  }
+  main .posts .posts__list .card__info {
+    font-size: 1rem;
+  }
+  main .posts .posts__list p {
+    font-size: 0.7rem;
+  }
+}
 footer {
   padding: 0.5rem;
   font-size: 1rem;
@@ -227,4 +288,16 @@ footer .logo__img {
 }
 footer .logo__img img {
   width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  footer {
+    font-size: 0.7rem;
+  }
+  footer .logo__img {
+    width: 5rem;
+  }
+  footer .logo__img img {
+    width: 100%;
+  }
 }
